fixed text-align

--- a/css/style.css
+++ b/css/style.css
@@ -10372,12 +10372,11 @@ body.nancys-advice {
 
 .ania-advice h1 {
   font-size: 20px;
-  align: center;
+  text-align: center;
   color: #800080;
 }
 
 .ania-advice h4 {
   font-size: 16px;
-  align: center;
+  text-align: center;
 }
-=======
